carousel : fix flip height on mobile

--- a/assets/src/sass/components/_flip.scss
+++ b/assets/src/sass/components/_flip.scss
@@ -2,8 +2,12 @@
  .flip-card {
   background-color: transparent;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  height: 500px;
+  height: 600px;
   width: 100px;
+
+  @media (min-width: 768px) { 
+		height: 500px;
+	}
 }
 
 /* This container is needed to position the front and back side */
